Fix image stretch

--- a/src/app/app-features/cart-page/_CartPage.scss
+++ b/src/app/app-features/cart-page/_CartPage.scss
@@ -44,6 +44,7 @@
 .cart-product-image {
   width: 120px;
   height: 120px;
+  object-fit: cover;
 }
 
 .cart-product-image-info {
